package(default_visibility = ["//visibility:public"])

#———————————————————————————————————————————————————————————————————————
# ignition_py
# 
# This is a Python library meta-target to hoist the pybind11 modules
# under src/pybind11 to the root directory so that
# 
#   imports = ["src/pybind11"]
# 
# can be used. It ensures that the 'ignition' package is visible on
# the PYTHONPATH and can be imported into modules without being prefixed
# by the fullpackage path 'python_ignition.src.pybind11'
# 
py_library(
  name = "ignition_py",
  imports = [
    "src/pybind11",
  ],
  data = [
    "//python_ignition/src/pybind11/ignition/msgs:extras.so",
    "//python_ignition/src/pybind11/ignition:transport.so",
  ],
)

#———————————————————————————————————————————————————————————————————————
# deps_check
# Quick check of dependencies on third-party packages

cc_binary(
  name = "deps_check",
  srcs = ["src/deps_check.cc"],
  deps = [
    "//ign_utils:ign_utils",
    "//ign_math:ign_math",
    "//ign_math:libignition-math7.so",
    "@tinyxml2",
    "@sqlite3",
    "@zmq",
    "@zip",
    "@yaml",
    "@curl",
    "@json",
    "@glib",
    "@gts",
    "@freeimage",
    # "@gl",
    # "@X//:Xaw",
  ],
)

#———————————————————————————————————————————————————————————————————————
# msg_example

cc_binary(
  name = "msg_example",
  srcs = [
    "src/msg_example.cc",
  ],
  deps = [
    "//ign_msgs:ign_msgs",
    "@com_google_protobuf//:protobuf",
  ],
)

#———————————————————————————————————————————————————————————————————————
# publisher

cc_binary(
  name = "publisher",
  srcs = [
    "src/publisher.cc",
  ],
  deps = [
    "//ign_msgs:ign_msgs",
    "//ign_transport:ign_transport",
    "@com_google_protobuf//:protobuf",
  ],
)

#———————————————————————————————————————————————————————————————————————
# subscriber

cc_binary(
  name = "subscriber",
  srcs = [
    "src/subscriber.cc",
  ],
  deps = [
    "//ign_msgs:ign_msgs",
    "//ign_transport:ign_transport",
    "@com_google_protobuf//:protobuf",
  ],
)

#———————————————————————————————————————————————————————————————————————
# rover_publisher

cc_binary(
  name = "rover_publisher",
  srcs = [
    "src/rover_publisher.cc",
  ],
  deps = [
    "//ign_math:ign_math",
    "//ign_msgs:ign_msgs",
    "//ign_transport:ign_transport",
    "@com_google_protobuf//:protobuf",
  ],
)

#———————————————————————————————————————————————————————————————————————
# rover_subscriber

cc_binary(
  name = "rover_subscriber",
  srcs = [
    "src/rover_subscriber.cc",
  ],
  deps = [
    "//ign_math:ign_math",
    "//ign_msgs:ign_msgs",
    "//ign_transport:ign_transport",
    "@com_google_protobuf//:protobuf",
  ],
)


#———————————————————————————————————————————————————————————————————————
# C++ example
cc_binary(
  name = "main",
  srcs = ["src/main.cc"],
  includes = ["include"],
  deps = [
    "//python_ignition/src/pybind11/ignition/msgs:ignition_msgs_extras_lib",
  ],
)

#———————————————————————————————————————————————————————————————————————
# ign_topic_echo
# 
cc_binary(
  name = "ign_topic_echo",
  srcs = ["src/ign_topic_echo.cc"],
  deps = [
    "//ign_msgs:ign_msgs",
    "//ign_transport:ign_transport",
    "@com_google_protobuf//:protobuf",
  ],
)
