package(default_visibility = ["//visibility:public"])

#———————————————————————————————————————————————————————————————————————
# gz_py
# 
# This is a Python library meta-target to hoist the pybind11 modules
# under src/pybind11 to the root directory so that
# 
#   imports = ["src/pybind11"]
# 
# can be used. It ensures that the 'gz' package is visible on
# the PYTHONPATH and can be imported into modules without being prefixed
# by the fullpackage path 'gz_python.src.pybind11'
# 
py_library(
  name = "gz_py",
  imports = [
    "src/pybind11",
  ],
  data = [
    "//gz_python/src/pybind11/gz/msgs:extras.so",
    "//gz_python/src/pybind11/gz:transport.so",
  ],
)

#———————————————————————————————————————————————————————————————————————
# deps_check
# Quick check of dependencies on third-party packages

cc_binary(
  name = "deps_check",
  srcs = ["src/deps_check.cc"],
  deps = [
    "//gz_utils:gz_utils",
    "//gz_math:gz_math",
    "//gz_math:libgz-math7.so",
    "@tinyxml2",
    "@sqlite3",
    "@zmq",
    "@zip",
    "@yaml",
    "@curl",
    "@json",
    "@glib",
    "@gts",
    "@freeimage",
    # "@gl",
    # "@X//:Xaw",
  ],
)

#———————————————————————————————————————————————————————————————————————
# msg_example

cc_binary(
  name = "msg_example",
  srcs = [
    "src/msg_example.cc",
  ],
  deps = [
    "//gz_msgs:gz_msgs",
    "@com_google_protobuf//:protobuf",
  ],
)

#———————————————————————————————————————————————————————————————————————
# publisher

cc_binary(
  name = "publisher",
  srcs = [
    "src/publisher.cc",
  ],
  deps = [
    "//gz_msgs:gz_msgs",
    "//gz_transport:gz_transport",
    "@com_google_protobuf//:protobuf",
  ],
)

#———————————————————————————————————————————————————————————————————————
# subscriber

cc_binary(
  name = "subscriber",
  srcs = [
    "src/subscriber.cc",
  ],
  deps = [
    "//gz_msgs:gz_msgs",
    "//gz_transport:gz_transport",
    "@com_google_protobuf//:protobuf",
  ],
)

#———————————————————————————————————————————————————————————————————————
# rover_publisher

cc_binary(
  name = "rover_publisher",
  srcs = [
    "src/rover_publisher.cc",
  ],
  deps = [
    "//gz_math:gz_math",
    "//gz_msgs:gz_msgs",
    "//gz_transport:gz_transport",
    "@com_google_protobuf//:protobuf",
  ],
)

#———————————————————————————————————————————————————————————————————————
# rover_subscriber

cc_binary(
  name = "rover_subscriber",
  srcs = [
    "src/rover_subscriber.cc",
  ],
  deps = [
    "//gz_math:gz_math",
    "//gz_msgs:gz_msgs",
    "//gz_transport:gz_transport",
    "@com_google_protobuf//:protobuf",
  ],
)


#———————————————————————————————————————————————————————————————————————
# C++ example
cc_binary(
  name = "main",
  srcs = ["src/main.cc"],
  includes = ["include"],
  deps = [
    "//gz_python/src/pybind11/gz/msgs:gz_msgs_extras_lib",
  ],
)

#———————————————————————————————————————————————————————————————————————
# gz_topic_echo
# 
cc_binary(
  name = "gz_topic_echo",
  srcs = ["src/gz_topic_echo.cc"],
  deps = [
    "//gz_msgs:gz_msgs",
    "//gz_transport:gz_transport",
    "@com_google_protobuf//:protobuf",
  ],
)
